src/test/pass/class_nesting_check.ly
class c1(integer a) {
    class c2(integer b) {

    }
    var @v = c2::new(1)
}
var v = c1::new(1)
