src/test/fail/trigger_keyerror.ly
###
KeyError: "b"
Traceback:
    Function __main__ at line 9
###

var v = ["a" => 1]

show(v["b"])
